[gd_scene load_steps=29 format=2]

[ext_resource path="res://game_screen/entities/enemies/enemy_unit.gd" type="Script" id=1]
[ext_resource path="res://assets/creeps.png" type="Texture" id=2]
[ext_resource path="res://util/state_label.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/particles.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[sub_resource type="Shader" id=20]
code = "shader_type canvas_item;

uniform float white_progress : hint_range(0,1) = 0;

vec3 interpolate_vec3(vec3 start, vec3 end, float delta) {
    return start + (end - start) * delta;
}

void fragment() {
    vec4 origin = texture(TEXTURE, UV);
    COLOR.rgb = interpolate_vec3(origin.rgb, vec3(1,1,1), white_progress);
    COLOR.a = origin.a;
}"

[sub_resource type="ShaderMaterial" id=24]
resource_local_to_scene = true
shader = SubResource( 20 )
shader_param/white_progress = 0.0

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "creep2",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "creep0",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "creep3",
"speed": 5.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "creep4",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "creep1",
"speed": 5.0
} ]

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:material:shader_param/white_progress")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=23]
resource_name = "damage"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/white_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.5, 1.0, 0.5, 1.0, 0.5, 0.0 ]
}

[sub_resource type="CanvasItemMaterial" id=27]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="Gradient" id=29]
offsets = PoolRealArray( 0.534836, 0.989754 )
colors = PoolColorArray( 0.580392, 0.0588235, 0, 1, 0.14902, 0.0352941, 0.156863, 1 )

[sub_resource type="CanvasItemMaterial" id=30]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="Gradient" id=25]
offsets = PoolRealArray( 0.393443, 0.993852, 1 )
colors = PoolColorArray( 0.580392, 0.0588235, 0, 1, 0.14902, 0.0352941, 0.156863, 1, 0, 0, 0, 1 )

[node name="EnemyUnit" type="KinematicBody2D" groups=["EnemyUnit"]]
collision_mask = 0
script = ExtResource( 1 )

[node name="EnemyShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StateLabel" parent="." instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -18.5847
margin_top = -17.9811
margin_right = 18.4153
margin_bottom = -3.98109

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 24 )
rotation = 1.5708
frames = SubResource( 6 )
animation = "creep0"
playing = true

[node name="AttackTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 22 )
anims/damage = SubResource( 23 )

[node name="DeathEffect" type="CPUParticles2D" parent="."]
material = SubResource( 27 )
use_parent_material = true
emitting = false
amount = 5
lifetime = 0.5
one_shot = true
explosiveness = 0.75
texture = SubResource( 26 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.3
linear_accel = -500.0
linear_accel_random = 0.1
angle = 720.0
angle_random = 1.0
color_ramp = SubResource( 29 )
anim_offset = 1.0

[node name="DeathEffect2" type="CPUParticles2D" parent="."]
material = SubResource( 30 )
emitting = false
amount = 20
lifetime = 0.33
one_shot = true
explosiveness = 0.75
texture = SubResource( 28 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.3
linear_accel = -500.0
linear_accel_random = 0.1
angle = 720.0
angle_random = 1.0
scale_amount = 0.1
scale_amount_random = 0.2
color_ramp = SubResource( 25 )
anim_offset = 1.0

[node name="CleanupTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="CleanupTimer" to="." method="_on_CleanupTimer_timeout"]
